[tool.poetry]
name = "taskcluster-inspect"
version = "0.2.0"
description = "A simple command line tool for inspecting Taskcluster state."
authors = ["Andrew Halberstadt <ahal@pm.me>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
cleo = "^0.8.1"
tabulate = "^0.8.9"
taskcluster = "^44.13.6"
petl = "^1.7.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tc-inspect = 'taskcluster_inspect.console.application:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
